[gd_scene load_steps=10 format=3 uid="uid://dqai4a0bufjj"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_3hhv7"]
[ext_resource type="Shader" path="res://Assets/Shaders/pause_menu.gdshader" id="2_cj14q"]
[ext_resource type="Texture2D" uid="uid://fuxayqol1lkd" path="res://Assets/Sprites/Menu/Options.png" id="3_043c3"]
[ext_resource type="Shader" path="res://Assets/Shaders/options.gdshader" id="3_dbs1q"]
[ext_resource type="Script" path="res://Scripts/options.gd" id="3_lrfm0"]
[ext_resource type="Texture2D" uid="uid://dlfsarra0k8dq" path="res://Assets/Sprites/Menu/Return.png" id="3_x5dno"]
[ext_resource type="Texture2D" uid="uid://ch0ht105wutr7" path="res://Assets/Sprites/Menu/MainMenuReturn.png" id="5_78fyt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wub4"]
shader = ExtResource("2_cj14q")
shader_parameter/amount = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_die17"]
shader = ExtResource("3_dbs1q")
shader_parameter/amount = 2.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3hhv7")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2wub4")
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = -3990.0
offset_top = -1641.0
offset_right = 6010.0
offset_bottom = 8359.0
scale = Vector2(5, 5)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -256.0
offset_right = 132.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_x5dno")
flat = true

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_043c3")
flat = true

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("5_78fyt")
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_die17")
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5, 5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -74.0
offset_right = 360.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lrfm0")

[node name="Fullscreen" type="CheckButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Fullscreen
"

[node name="VSync" type="CheckButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "VSync"

[node name="Volume" type="Label" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Max Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer2/Fullscreen" to="CanvasLayer/VBoxContainer2" method="_on_fullscreen_toggled"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer2/VSync" to="CanvasLayer/VBoxContainer2" method="_on_v_sycn_toggled"]
[connection signal="drag_ended" from="CanvasLayer/VBoxContainer2/VolumeSlider" to="CanvasLayer/VBoxContainer2" method="_on_volume_slider_drag_ended"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/Back" to="CanvasLayer/VBoxContainer2" method="_on_back_pressed"]
